# aws_rag_test

./: README.md  pyproject.toml  report.md
src/aws_rag_test/: crew.py  main.py
src/aws_rag_test/config/: agents.yaml  tasks.yaml
