[project]
name = "aws_rag_test"
version = "0.1.0"
description = "aws-rag-test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
aws_rag_test = "aws_rag_test.main:run"
run_crew = "aws_rag_test.main:run"
train = "aws_rag_test.main:train"
replay = "aws_rag_test.main:replay"
test = "aws_rag_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
